Support dest ip address blacklist and add some default v2ray find path

--- a/src/config_sample.ini
+++ b/src/config_sample.ini
@@ -5,13 +5,14 @@ run_dir = ./run
 gfwlist = https://raw.github.com/gfwlist/gfwlist/master/gfwlist.txt
 
 # 这里的 ip 不会走下面任何的规则
-ip_black_lists = 10.10.8.8
+ip_black_lists_src = 10.10.8.8
+ip_black_lists_dst =
 
 dns = 8.8.8.8
 dns_local_port = 2053
 
 [v2ray]
-v2ray = /opt/v2ray/v2ray
+v2ray = v2ray
 
 # 可以添加多余的 inbound
 # 多行注意后面的行需要前面有空格
