--- a/src/config_sample.ini
+++ b/src/config_sample.ini
@@ -5,8 +5,8 @@ run_dir = ./run
 gfwlist = https://raw.github.com/gfwlist/gfwlist/master/gfwlist.txt
 
 # 这里的 ip 不会走下面任何的规则
-ip_black_lists_src = 10.10.8.8
-ip_black_lists_dst =
+ip_blacklists_src = 10.10.8.8
+ip_blacklists_dst =
 
 dns = 8.8.8.8
 dns_local_port = 2053
