--- a/src/config_sample.ini
+++ b/src/config_sample.ini
@@ -8,12 +8,16 @@ gfwlist = https://raw.github.com/gfwlist/gfwlist/master/gfwlist.txt
 ip_blacklists_src = 10.10.8.8
 ip_blacklists_dst =
 
-dns = 8.8.8.8
-dns_local_port = 2053
+# 国外 dns
+international_dns = 8.8.8.8
+# 国内 dns
+domestic_dns = 114.114.114.114
+
+# dnsmasq 会把列表转发到这个端口查国外 dns
+international_dns_local_port = 2053
+dnsmasq_port = 60053
 
 [v2ray]
-v2ray = v2ray
-
 # 可以添加多余的 inbound
 # 多行注意后面的行需要前面有空格
 inbounds = [
@@ -24,10 +28,7 @@ outbounds = [
     ]
 
 [dnsmasq]
-dnsmasq = dnsmasq
-port = 60053
-domestic_server = 114.114.114.114
-config = log-async = 20
+ext_config = log-async = 20
        domain-needed
        no-negcache
        no-resolv
@@ -38,4 +39,5 @@ config = log-async = 20
 socks_local_port = 2054
 
 [list_netflix]
+# 需要在 list_dir 里面有对应的文件
 socks_local_port = 2055
