--- a/src/config_sample.ini
+++ b/src/config_sample.ini
@@ -8,6 +8,9 @@ gfwlist = https://raw.github.com/gfwlist/gfwlist/master/gfwlist.txt
 ip_blacklists_src = 10.10.8.8
 ip_blacklists_dst =
 
+# 可以增加需要加入到 SVGFW 规则的 iptables rules，会加到最前面，手动加入这个链的规则会被定时程序清空
+iptables_rules = [["-p", "tcp", "--dport", "1234", "-j", "DNAT", "--to-destination", "1.1.1.1:53"]]
+
 # 国外 dns
 international_dns = 8.8.8.8
 # 国内 dns
