Update readme, and add control to specific service

--- a/src/config_sample.ini
+++ b/src/config_sample.ini
@@ -1,3 +1,4 @@
+# 下面所有的多行配置项，注意后面的行需要前面有空格
 [main]
 lists_dir = ./lists
 run_dir = ./run
@@ -20,15 +21,46 @@ domestic_dns = 114.114.114.114
 international_dns_local_port = 2053
 dnsmasq_port = 60053
 
+# 可以使用 v2ray，ss，rely 三种中的一种
+# 这三个配置一个就可以，如果配置了多项，会随机选一个
+[ss]
+# 针对每个 list 需要有一个 config，至少需要有 gfwlist_config
+gfwlist_config = {
+    "server": "ip_addr",
+    "server_port": 3456,
+    "local_address": "0.0.0.0",
+    "method": "chacha20-ietf-poly1305",
+    "password": "pwd",
+    "fast_open": true,
+    "no_delay": true,
+    "reuse_port": true,
+    "plugin":"obfs-local",
+    "plugin_opts":"obfs=tls;obfs-host=abc.com;fast-open"
+ }
+
+netflix_config = {
+    "server": "server",
+    "server_port": 2345,
+    "local_address": "0.0.0.0",
+    "method": "chacha20-ietf",
+    "password": "pwd",
+    "no_delay": true,
+    "fast_open": true,
+    "reuse_port": true
+ }
+
 [v2ray]
 # 可以添加多余的 inbound
-# 多行注意后面的行需要前面有空格
 inbounds = [
  ]
 
 # outbounds 必须是可用的，并且针对下面每个 list 都需要有对应的 outbound
 outbounds = [
     ]
+
+[rely]
+# 路由器内存小，也可以通过其他机器上面启动的服务来上网，比如树莓派或者 NAS
+ip = 10.10.8.8
 
 [dnsmasq]
 ext_config = log-async = 20
