--- a/tests/config.ini
+++ b/tests/config.ini
@@ -8,8 +8,13 @@ gfwlist = https://raw.github.com/gfwlist/gfwlist/master/gfwlist.txt
 ip_blacklists_src = 10.10.8.8
 ip_blacklists_dst =
 
-dns = 8.8.8.8
-dns_local_port = 2053
+iptables_rules =
+
+international_dns = 8.8.8.8
+domestic_dns = 114.114.114.114
+
+international_dns_local_port = 2053
+dnsmasq_port = 60053
 
 [v2ray]
 v2ray = v2ray
@@ -23,10 +28,7 @@ inbounds = [
 outbounds = [{"tag": "gfwlist"}, {"tag": "netflix"}]
 
 [dnsmasq]
-dnsmasq = dnsmasq
-port = 60053
-domestic_server = 114.114.114.114
-config = log-async = 20
+ext_config = log-async = 20
        domain-needed
        no-negcache
        no-resolv
