--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,10 +10,9 @@ jobs:
     - uses: actions/checkout@v1
     - name: Prepare
       run: |
-        pip install pipenv
-        python -m pipenv install --dev
+        pip3 install pipenv
+        python3 -m pipenv install --dev
         cp tests/config.ini src
     - name: Run tests
       run: |
-          cd /home/runner/work/simple-v2ray-gfwlist/simple-v2ray-gfwlist
-          python -m pipenv run pytest -v
+          python3 -m pipenv run pytest -v
